<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewDay"
            type="com.ceylonapz.weatherlive.viewmodel.DayItemViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.activity.DetailsActivity">

        <!--main forecast view-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="20dp"
            android:weightSum="100">

            <!--date max low content-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewDay.day.datetime}"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorSurface"
                    tools:text="2021-10-21" />

                <TextView
                    android:id="@+id/txtMaxMinTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{@string/temp_max_min(viewDay.getFormattedTemperture(viewDay.day.tempmax),viewDay.getFormattedTemperture(viewDay.day.tempmin))}"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorSurface"
                    tools:text="30 C' | 16 C'" />

                <TextView
                    android:id="@+id/txtCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewDay.day.conditions}"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textColor="?attr/colorSurface"
                    tools:text="Partly Cloud" />
            </LinearLayout>

            <!--condition icon-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCondition"
                    android:layout_width="@dimen/forecast_icon"
                    android:layout_height="@dimen/forecast_icon"
                    android:contentDescription="@string/weather_icon"
                    android:src="@drawable/ic_forecast_fair_day"
                    app:imageFromUrl="@{viewDay.day.icon}" />
            </LinearLayout>
            <!--condition icon End-->

        </LinearLayout>
        <!--main forecast view End-->


        <!--current condition view-->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="15dp"
                android:weightSum="2">

                <!--titles-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        android:textAppearance="?attr/textAppearanceSubtitle1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/humidity"
                        android:textAppearance="?attr/textAppearanceSubtitle1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/uv_index"
                        android:textAppearance="?attr/textAppearanceSubtitle1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/sunrise"
                        android:textAppearance="?attr/textAppearanceSubtitle1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/sunset"
                        android:textAppearance="?attr/textAppearanceSubtitle1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/description"
                        android:textAppearance="?attr/textAppearanceSubtitle1" />

                </LinearLayout>

                <!--details-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtWindspeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{@string/wind_format(viewDay.day.windspeed)}"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        tools:text="@string/wind_speed" />

                    <TextView
                        android:id="@+id/txtHumidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{@string/humidity_format(viewDay.day.humidity)}"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        tools:text="Humidity" />

                    <TextView
                        android:id="@+id/UvIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{String.valueOf(viewDay.day.uvindex)}"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        tools:text="UV Index" />

                    <TextView
                        android:id="@+id/txtSunrise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{viewDay.day.sunrise}"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        tools:text="Sunrise" />

                    <TextView
                        android:id="@+id/txtSunset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{viewDay.day.sunset}"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        tools:text="Sunset" />

                    <TextView
                        android:id="@+id/txtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{viewDay.day.description}"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        tools:text="Description" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <!--current condition view End-->

    </LinearLayout>
</layout>